specs/001-typescript-to-zig-native/examples/invalid/string-concat-type.ts
let bad = "count: " + 1;
